[tool.poetry]
name = "neofp"
version = "0.1.0"
description = ""
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"

[tool.poetry.dependencies]
python = "^3.11"
hy = "^0.27.0"
hyrule = "^0.4.0"
hiolib = "^0.1.0"
hpacket = "^0.1.0"
scapy = "^2.5.0"
pypcap = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
